--- a/file/styles/sass/About.module.scss
+++ b/file/styles/sass/About.module.scss
@@ -8,6 +8,7 @@
     // padding: 0 10% 0 5%;
    
     position: relative;
+    align-items: center;
     .imgDiv{
         position: absolute;
         bottom:0%;
@@ -21,16 +22,21 @@
         font-size: $base-font-size;
         // min-width: 30rem;
         max-width: 45rem;
-        margin: 7% 5%; 
+        
+        // margin: 7% 5%; 
         height: fit-content;
         color: $primary-white;
         font-family: $content-font-family;
         text-shadow: $base-font-shadow;
-       z-index: 1;
-    //    align-items: flex-end;
-    display: flex;
-    flex-direction: column;
-    margin-left: 30%;
+        z-index: 1;
+        
+        //    align-items: flex-end;
+        display: flex;
+        flex-direction: column;
+        margin-left: 35%;
+        margin-right: 10%;
+        justify-content: center;
+
        .name{
         font-size: 3rem;
         margin-bottom: 1rem;
@@ -62,12 +68,28 @@
         // width: 100vw;
     }
     .imgDiv{
-        width: 50%;
+        width: 50% !important;
         
     }
     
 }
-
+@media  only screen and (max-width:1120px) {
+    .text_container{
+        margin-left: 38% !important;
+        margin-right: 5% !important;
+    }
+    .text_content_white_base{
+        // font-size: 4vw;
+       max-width: 500px;
+    //    margin-left: 15%;
+    //    margin-right: 0%;
+    }
+    .imgDiv{
+        width: 45% !important;
+        left: 2% !important;
+        
+    }
+}
 @media  only screen and (max-width:600px) {
     
     // .img{
@@ -93,7 +115,7 @@
     }
     .text_content_white_base{
         font-size: 4vw;
-        width: 90%;
+        // width: 90%;
         align-self: flex-end;
     }
 }
