--- a/file/styles/sass/Projects.module.scss
+++ b/file/styles/sass/Projects.module.scss
@@ -159,11 +159,11 @@
 }
 .project_backgroud{
     position: absolute;
-    width: 120%;
+    width: 200%;
     background-color: $primary-skyblue;
     top:18%;
     height: 65%;
-    left: -6%;
+    left: -20%;
 }
 @media  only screen and (max-width:660px) {
     
